--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -1,21 +1,48 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
-
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:ui="http://xmlns.jcp.org/jsf/facelets" xmlns:h="http://xmlns.jcp.org/jsf/html">
+        
+    
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <title><ui:insert name="title">Default Title</ui:insert></title>
-        <h:outputStylesheet library="css" name="jsfcrud.css"/>
+        <title>Restaurante la Mejor Cocina</title>
+        <h:outputStylesheet library="css" name="bootstrap.min.css"/>
+        <h:outputScript library="js" name="bootstrap.min.js" /> 
+        <h:outputScript library="js" name="jquery.min.js" /> 
     </h:head>
 
     <h:body>
+           <nav class="navbar navbar-inverse">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>                        
+                    </button>
+                    <a class="navbar-brand" href="#">La Mejor Cocina</a>
+                </div>
+                <div class="collapse navbar-collapse" id="myNavbar">
+                    <ul class="nav navbar-nav">
+                        <li class="active"> <h:link outcome="/index" value="Home"/></li>
+                        <li class="dropdown">
+                            <li><h:link outcome="/camarero/List" value="Camareros"/></li>
+                            <li><h:link outcome="/cliente/List" value="Clientes"/></li>
+                            <li><h:link outcome="/cocinero/List" value="Cocineros"/></li>  
+                            <li><h:link outcome="/mesa/List" value="Mesas"/></li>
+                            <li><h:link outcome="/factura/List" value="Facturas"/></li>      
+                            <li><h:link outcome="/reportes/ClientesxMonto" value="Superior a 100.000"/></li>
+                            <li><h:link outcome="/camarero/List" value="Total por camarero"/></li>
+                        </li>                       
+                    </ul>               
+                </div>
+            </div>
+        </nav>
         <h1>
-            <ui:insert name="title">Default Title</ui:insert>
+            <ui:insert name="title">La Mejor Cocina</ui:insert>
         </h1>
         <p>
-            <ui:insert name="body">Default Body</ui:insert>
+            <ui:insert name="body">Cargando...</ui:insert>
         </p>
     </h:body>
 
