Cambios de estilo

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -28,7 +28,8 @@
                             <li><h:link outcome="/cliente/List" value="Clientes"/></li>
                             <li><h:link outcome="/cocinero/List" value="Cocineros"/></li>  
                             <li><h:link outcome="/mesa/List" value="Mesas"/></li>
-                            <li><h:link outcome="/factura/List" value="Facturas"/></li>      
+                            <li><h:link outcome="/factura/List" value="Facturas"/></li>  
+                            <li><h:link outcome="/detallefactura/List" value="Detalle Facturas"/></li>
                             <li><h:link outcome="/reportes/ClientesxMonto" value="Superior a 100.000"/></li>
                             <li><h:link outcome="/camarero/List" value="Total por camarero"/></li>
                         </li>                       
