--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -5,8 +5,8 @@
     
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <title>Restaurante la Mejor Cocina</title>
-        <h:outputStylesheet library="css" name="bootstrap.min.css"/>
+        <title>Restaurante la Mejor Cocina</title>      
+        <h:outputStylesheet library="css" name="bootstrap.min.css"/>jsfcrud
         <h:outputScript library="js" name="bootstrap.min.js" /> 
         <h:outputScript library="js" name="jquery.min.js" /> 
     </h:head>
@@ -30,9 +30,10 @@
                             <li><h:link outcome="/cliente/List" value="Clientes"/></li>
                             <li><h:link outcome="/cocinero/List" value="Cocineros"/></li>  
                             <li><h:link outcome="/mesa/List" value="Mesas"/></li>
-                            <li><h:link outcome="/factura/List" value="Facturas"/></li>      
+                            <li><h:link outcome="/factura/List" value="Facturas"/></li>  
+                            <li><h:link outcome="/detallefactura/List" value="Detalle Facturas"/></li>  
                             <li><h:link outcome="/reportes/ClientesxMonto" value="Superior a 100.000"/></li>
-                            <li><h:link outcome="/camarero/List" value="Total por camarero"/></li>
+                            <li><a href="#">Total por camarero</a></li>
                         </li>                       
                     </ul>               
                 </div>
