--- a/src/main/webapp/camarero/List.xhtml
+++ b/src/main/webapp/camarero/List.xhtml
@@ -19,7 +19,7 @@
                     <h:outputText value="#{camareroController.pagination.pageFirstItem + 1}..#{camareroController.pagination.pageLastItem + 1}/#{camareroController.pagination.itemsCount}"/>&nbsp;
                     <h:commandLink action="#{camareroController.previous}" value="#{bundle.Previous} #{camareroController.pagination.pageSize}" rendered="#{camareroController.pagination.hasPreviousPage}"/>&nbsp;
                     <h:commandLink action="#{camareroController.next}" value="#{bundle.Next} #{camareroController.pagination.pageSize}" rendered="#{camareroController.pagination.hasNextPage}"/>&nbsp;
-                    <h:dataTable value="#{camareroController.items}" var="item" border="0" cellpadding="2" cellspacing="0" rowClasses="jsfcrud_odd_row,jsfcrud_even_row" rules="all" style="border:solid 1px">
+                    <h:dataTable value="#{camareroController.items}" var="item" border="0" cellpadding="2" cellspacing="0" styleClass="table table-striped" rules="all" style="border:solid 1px">
                         <h:column>
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListCamareroTitle_idCamarero}"/>
