--- a/src/main/webapp/cocinero/List.xhtml
+++ b/src/main/webapp/cocinero/List.xhtml
@@ -19,7 +19,7 @@
                     <h:outputText value="#{cocineroController.pagination.pageFirstItem + 1}..#{cocineroController.pagination.pageLastItem + 1}/#{cocineroController.pagination.itemsCount}"/>&nbsp;
                     <h:commandLink action="#{cocineroController.previous}" value="#{bundle.Previous} #{cocineroController.pagination.pageSize}" rendered="#{cocineroController.pagination.hasPreviousPage}"/>&nbsp;
                     <h:commandLink action="#{cocineroController.next}" value="#{bundle.Next} #{cocineroController.pagination.pageSize}" rendered="#{cocineroController.pagination.hasNextPage}"/>&nbsp;
-                    <h:dataTable value="#{cocineroController.items}" var="item" border="0" cellpadding="2" cellspacing="0" rowClasses="jsfcrud_odd_row,jsfcrud_even_row" rules="all" style="border:solid 1px">
+                    <h:dataTable value="#{cocineroController.items}" var="item" border="0" cellpadding="2" cellspacing="0" styleClass="table table-striped" rules="all" style="border:solid 1px">
                         <h:column>
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListCocineroTitle_idCocinero}"/>
