--- a/src/main/webapp/detallefactura/List.xhtml
+++ b/src/main/webapp/detallefactura/List.xhtml
@@ -19,7 +19,7 @@
                     <h:outputText value="#{detallefacturaController.pagination.pageFirstItem + 1}..#{detallefacturaController.pagination.pageLastItem + 1}/#{detallefacturaController.pagination.itemsCount}"/>&nbsp;
                     <h:commandLink action="#{detallefacturaController.previous}" value="#{bundle.Previous} #{detallefacturaController.pagination.pageSize}" rendered="#{detallefacturaController.pagination.hasPreviousPage}"/>&nbsp;
                     <h:commandLink action="#{detallefacturaController.next}" value="#{bundle.Next} #{detallefacturaController.pagination.pageSize}" rendered="#{detallefacturaController.pagination.hasNextPage}"/>&nbsp;
-                    <h:dataTable value="#{detallefacturaController.items}" var="item" border="0" cellpadding="2" cellspacing="0" rowClasses="jsfcrud_odd_row,jsfcrud_even_row" rules="all" style="border:solid 1px">
+                    <h:dataTable value="#{detallefacturaController.items}" var="item" border="0" cellpadding="2" cellspacing="0" styleClass="table table-striped" rules="all" style="border:solid 1px">
                         <h:column>
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListDetallefacturaTitle_idDetalleFactura}"/>
