--- a/src/main/webapp/mesa/List.xhtml
+++ b/src/main/webapp/mesa/List.xhtml
@@ -19,7 +19,7 @@
                     <h:outputText value="#{mesaController.pagination.pageFirstItem + 1}..#{mesaController.pagination.pageLastItem + 1}/#{mesaController.pagination.itemsCount}"/>&nbsp;
                     <h:commandLink action="#{mesaController.previous}" value="#{bundle.Previous} #{mesaController.pagination.pageSize}" rendered="#{mesaController.pagination.hasPreviousPage}"/>&nbsp;
                     <h:commandLink action="#{mesaController.next}" value="#{bundle.Next} #{mesaController.pagination.pageSize}" rendered="#{mesaController.pagination.hasNextPage}"/>&nbsp;
-                    <h:dataTable value="#{mesaController.items}" var="item" border="0" cellpadding="2" cellspacing="0" rowClasses="jsfcrud_odd_row,jsfcrud_even_row" rules="all" style="border:solid 1px">
+                    <h:dataTable value="#{mesaController.items}" var="item" border="0" cellpadding="2" cellspacing="0" styleClass="table table-striped" rules="all" style="border:solid 1px">
                         <h:column>
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListMesaTitle_idMesa}"/>
