--- a/src/main/webapp/reportes/ClientesxMonto.xhtml
+++ b/src/main/webapp/reportes/ClientesxMonto.xhtml
@@ -16,7 +16,7 @@
                 </h:panelGroup>
                 <h:outputText escape="false" value="#{bundle.ListClienteEmpty}" rendered="#{clienteReporteController.items.rowCount == 0}"/>
                 <h:panelGroup rendered="#{clienteReporteController.items.rowCount > 0}">
-                    <h:dataTable value="#{clienteReporteController.items}" var="item" border="0" cellpadding="2" cellspacing="0" rowClasses="jsfcrud_odd_row,jsfcrud_even_row" rules="all" style="border:solid 1px">
+                    <h:dataTable value="#{clienteReporteController.items}" var="item" border="0" cellpadding="2" cellspacing="0" styleClass="table table-striped" rules="all" style="border:solid 1px">
                         <h:column>
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListClienteTitle_idCliente}"/>
