Finalizaciòn reporte por camarero por mes por ventas Mejoras visuales

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -31,7 +31,7 @@
                             <li><h:link outcome="/factura/List" value="Facturas"/></li>  
                             <li><h:link outcome="/detallefactura/List" value="Detalle Facturas"/></li>
                             <li><h:link outcome="/reportes/ClientesxMonto" value="Superior a 100.000"/></li>
-                            <li><h:link outcome="/camarero/List" value="Total por camarero"/></li>
+                            <li><h:link outcome="/reportes/CamareroFacturacionMes" value="Total por camarero"/></li>
                         </li>                       
                     </ul>               
                 </div>
