--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -6,7 +6,7 @@
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <title>Restaurante la Mejor Cocina</title>      
-        <h:outputStylesheet library="css" name="bootstrap.min.css"/>jsfcrud
+        <h:outputStylesheet library="css" name="bootstrap.min.css"/>
         <h:outputScript library="js" name="bootstrap.min.js" /> 
         <h:outputScript library="js" name="jquery.min.js" /> 
     </h:head>
@@ -33,7 +33,7 @@
                             <li><h:link outcome="/factura/List" value="Facturas"/></li>  
                             <li><h:link outcome="/detallefactura/List" value="Detalle Facturas"/></li>  
                             <li><h:link outcome="/reportes/ClientesxMonto" value="Superior a 100.000"/></li>
-                            <li><a href="#">Total por camarero</a></li>
+                            <li><h:link outcome="/reportes/CamareroFacturacionMes" value="Total por camarero"/></li>
                         </li>                       
                     </ul>               
                 </div>
