--- a/src/main/webapp/factura/Create.xhtml
+++ b/src/main/webapp/factura/Create.xhtml
@@ -3,7 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:a="http://xmlns.jcp.org/jsf/passthrough">
 
     <ui:composition template="/template.xhtml">
         <ui:define name="title">
@@ -13,23 +14,23 @@
             <h:panelGroup id="messagePanel" layout="block">
                 <h:messages errorStyle="color: red" infoStyle="color: green" layout="table"/>
             </h:panelGroup>
-            <h:form>
-                <h:panelGrid columns="2">
-                    <h:outputLabel value="#{bundle.CreateFacturaLabel_idFactura}" for="idFactura" />
-                    <h:inputText id="idFactura" value="#{facturaController.selected.idFactura}" title="#{bundle.CreateFacturaTitle_idFactura}" required="true" requiredMessage="#{bundle.CreateFacturaRequiredMessage_idFactura}"/>
-                    <h:outputLabel value="#{bundle.CreateFacturaLabel_fechaFactura}" for="fechaFactura" />
-                    <h:inputText id="fechaFactura" value="#{facturaController.selected.fechaFactura}" title="#{bundle.CreateFacturaTitle_fechaFactura}" required="true" requiredMessage="#{bundle.CreateFacturaRequiredMessage_fechaFactura}">
+            <h:form a:class="form-horizontal">
+                <h:panelGrid columns="2" a:class="form-group">
+                    <h:outputLabel a:class="control-label col-sm-2" value="#{bundle.CreateFacturaLabel_idFactura}" for="idFactura" />
+                    <h:inputText  id="idFactura" value="#{facturaController.selected.idFactura}" title="#{bundle.CreateFacturaTitle_idFactura}" required="true" requiredMessage="#{bundle.CreateFacturaRequiredMessage_idFactura}"/>
+                    <h:outputLabel a:class="control-label col-sm-2" value="#{bundle.CreateFacturaLabel_fechaFactura}" for="fechaFactura" />
+                    <h:inputText a:placeholder="MM/dd/yyyy HH:mm:ss" id="fechaFactura" value="#{facturaController.selected.fechaFactura}" title="#{bundle.CreateFacturaTitle_fechaFactura}" required="true" requiredMessage="#{bundle.CreateFacturaRequiredMessage_fechaFactura}">
                         <f:convertDateTime pattern="MM/dd/yyyy HH:mm:ss" />
                     </h:inputText>
-                    <h:outputLabel value="#{bundle.CreateFacturaLabel_idCliente}" for="idCliente" />
+                    <h:outputLabel a:class="control-label col-sm-2" value="#{bundle.CreateFacturaLabel_idCliente}" for="idCliente" />
                     <h:selectOneMenu id="idCliente" value="#{facturaController.selected.idCliente}" title="#{bundle.CreateFacturaTitle_idCliente}" required="true" requiredMessage="#{bundle.CreateFacturaRequiredMessage_idCliente}">
                         <f:selectItems value="#{clienteController.itemsAvailableSelectOne}"/>
                     </h:selectOneMenu>
-                    <h:outputLabel value="#{bundle.CreateFacturaLabel_idCamarero}" for="idCamarero" />
+                    <h:outputLabel a:class="control-label col-sm-2" value="#{bundle.CreateFacturaLabel_idCamarero}" for="idCamarero" />
                     <h:selectOneMenu id="idCamarero" value="#{facturaController.selected.idCamarero}" title="#{bundle.CreateFacturaTitle_idCamarero}" required="true" requiredMessage="#{bundle.CreateFacturaRequiredMessage_idCamarero}">
                         <f:selectItems value="#{camareroController.itemsAvailableSelectOne}"/>
                     </h:selectOneMenu>
-                    <h:outputLabel value="#{bundle.CreateFacturaLabel_idMesa}" for="idMesa" />
+                    <h:outputLabel a:class="control-label col-sm-2" value="#{bundle.CreateFacturaLabel_idMesa}" for="idMesa" />
                     <h:selectOneMenu id="idMesa" value="#{facturaController.selected.idMesa}" title="#{bundle.CreateFacturaTitle_idMesa}" required="true" requiredMessage="#{bundle.CreateFacturaRequiredMessage_idMesa}">
                         <f:selectItems value="#{mesaController.itemsAvailableSelectOne}"/>
                     </h:selectOneMenu>
